Migrate to `@Builder` in `VenturaCalendarDate`, optimize placeholder handling, refactor events and config, and remove deprecated `Date` usages.
### Changes Summary

1. **VenturaCalendarDate**
   - Added `@Builder` annotation and replaced constructor cloning with a `clone` method using the builder pattern.
   - Removed deprecated `Date` usage and its associated `toDate` method.

2. **Placeholders**
   - Enhanced placeholder management by ordering methods more logically and grouping related constants together.
   - Updated placeholder replacement methods for better readability.

3. **DateCalculator**
   - Refactored date construction functionality to utilize the new builder pattern.

4. **Event Handling**
   - Simplified event handling by replacing redundant getter methods (`getDisplayName`, `getName`) with direct field usage.

5. **Config and Listeners**
   - Unified stream handling with `toList` instead of `Collectors.toList`.
   - Modernized map usage with `EnumMap` where appropriate.

6. **Miscellaneous**
   - Removed duplicate code and improved formatting consistency.
   - Updated `UpdateChecker` to use `URI` for improved URL handling.
   - Improved class structure in events by moving `isCancelled` close to the field declaration.