@@ -5,7 +5,7 @@ import org.bukkit.Bukkit;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Scanner;
 import java.util.function.Consumer;
 
@@ -20,15 +20,14 @@ public final class UpdateChecker {
 
     public void getVersion(final Consumer<String> consumer) {
         Bukkit.getScheduler().runTaskAsynchronously(this.plugin, () -> {
-            try (InputStream inputStream =
-                         new URL("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).openStream();
-
+            try (InputStream inputStream = URI.create("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId)
+                    .toURL()
+                    .openStream();
                  Scanner scanner = new Scanner(inputStream)) {
                 if (scanner.hasNext()) {
                     consumer.accept(scanner.next());
                 }
-            }
-            catch (IOException ex) {
+            } catch (IOException ex) {
                 Messenger.log(Messenger.Level.WARN, "Failed to check for updates.");
                 Messenger.log(Messenger.Level.DEBUG, ex.getMessage());
             }
