@@ -4,7 +4,6 @@ import com.cryptomorin.xseries.XMaterial;
 import me.clip.placeholderapi.PlaceholderAPI;
 import me.m0dii.venturacalendar.VenturaCalendar;
 import me.m0dii.venturacalendar.base.dateutils.*;
-import me.m0dii.venturacalendar.base.dateutils.VenturaCalendarDate;
 import net.md_5.bungee.api.ChatColor;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
@@ -16,17 +15,12 @@ import java.util.Optional;
 import java.util.regex.Pattern;
 
 public class Utils {
+    private static final VenturaCalendar plugin = VenturaCalendar.getInstance();
+    private static final Pattern HEX_PATTERN = Pattern.compile("&#([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])");
+
     private Utils() {
         // Utility class, no instantiation allowed
     }
-
-    private static final VenturaCalendar plugin = VenturaCalendar.getInstance();
-
-    private static final String[] MONTHS = new String[] {
-            "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"
-    };
-
-    private static final Pattern HEX_PATTERN = Pattern.compile("&#([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])([A-Fa-f0-9])");
 
     public static String format(String text) {
         if (text == null || text.isEmpty())
@@ -107,7 +101,7 @@ public class Utils {
 
         for (MonthEvent event : plugin.getEventConfig().getEvents()) {
             if (event.includesDate(date)) {
-                eventName = event.getDisplayName();
+                eventName = event.getEventDisplayName();
                 eventDesc = String.join("\n", event.getDescription());
             }
         }
@@ -122,11 +116,11 @@ public class Utils {
 
         String seasonName = "";
 
-        if(date.getMonth() < 3 || date.getMonth() > 10) {
+        if (date.getMonth() < 3 || date.getMonth() > 10) {
             seasonName = seasonNames.get(3);
-        } else if(date.getMonth() < 6) {
-            seasonName = seasonNames.get(0);
-        } else if(date.getMonth() < 9) {
+        } else if (date.getMonth() < 6) {
+            seasonName = seasonNames.getFirst();
+        } else if (date.getMonth() < 9) {
             seasonName = seasonNames.get(1);
         } else {
             seasonName = seasonNames.get(2);
@@ -150,7 +144,7 @@ public class Utils {
     public static String setPlaceholders(String message, VenturaCalendarDate venturaCalendarDate, boolean papi, Player p) {
         DateUtils du = plugin.getDateUtils();
 
-        venturaCalendarDate = new VenturaCalendarDate(venturaCalendarDate);
+        venturaCalendarDate = VenturaCalendarDate.clone(venturaCalendarDate);
         TimeSystem timeSystem = TimeSystem.of(venturaCalendarDate.getTimeSystem());
         venturaCalendarDate = du.addZeroPoints(venturaCalendarDate);
 
@@ -170,7 +164,7 @@ public class Utils {
                 .replaceAll("%[yY]ear(|s)%", String.valueOf(venturaCalendarDate.getYear()))
                 .replaceAll("%[eE]ra(|s)%", String.valueOf(venturaCalendarDate.getEra()));
 
-        if(p != null) {
+        if (p != null) {
             message = message.replaceAll("%world_ticks%", String.valueOf(p.getWorld().getFullTime()));
         }
 
@@ -181,7 +175,7 @@ public class Utils {
 
         for (MonthEvent event : plugin.getEventConfig().getEvents()) {
             if (event.includesDate(venturaCalendarDate)) {
-                eventName = event.getDisplayName();
+                eventName = event.getEventDisplayName();
                 eventDesc = String.join("\n", event.getDescription());
             }
         }
@@ -219,8 +213,7 @@ public class Utils {
 
             if (sendAs.equalsIgnoreCase("[MESSAGE]") || sendAs.equalsIgnoreCase("[TEXT]")) {
                 player.sendMessage(cmd);
-            }
-            else if (sendAs.equalsIgnoreCase("[TITLE]")) {
+            } else if (sendAs.equalsIgnoreCase("[TITLE]")) {
                 String[] split = cmd.split(", ");
 
                 int fadeIn = 20;
@@ -249,8 +242,7 @@ public class Utils {
                         fadeIn = Integer.parseInt(split[1]);
                         stay = Integer.parseInt(split[2]);
                         fadeOut = Integer.parseInt(split[3]);
-                    }
-                    catch (NumberFormatException ex) {
+                    } catch (NumberFormatException ex) {
                         Messenger.log(Messenger.Level.WARN, "Invalid fade-in, stay, or fade-out time for title action.");
                         Messenger.log(Messenger.Level.DEBUG, ex.getMessage());
                     }
@@ -267,39 +259,32 @@ public class Utils {
                         fadeIn = Integer.parseInt(split[2]);
                         stay = Integer.parseInt(split[3]);
                         fadeOut = Integer.parseInt(split[4]);
-                    }
-                    catch (NumberFormatException ex) {
+                    } catch (NumberFormatException ex) {
                         Messenger.log(Messenger.Level.WARN, "Invalid fadeIn, stay, or fadeOut time for title action.");
                         Messenger.log(Messenger.Level.DEBUG, ex.getMessage());
                     }
 
                     player.sendTitle(split[0], subtitle, fadeIn, stay, fadeOut);
                 }
-            }
-            else if (sendAs.equalsIgnoreCase("[CHAT]")) {
+            } else if (sendAs.equalsIgnoreCase("[CHAT]")) {
                 player.chat(cmd);
-            }
-            else if (sendAs.equalsIgnoreCase("[SOUND]")) {
+            } else if (sendAs.equalsIgnoreCase("[SOUND]")) {
                 String[] split = cmd.split(", ");
 
                 if (split.length == 2) {
                     try {
                         player.playSound(player.getLocation(), Sound.valueOf(split[0]), Float.parseFloat(split[1]), Float.parseFloat(split[1]));
-                    }
-                    catch (Exception ex) {
+                    } catch (Exception ex) {
                         Messenger.log(Messenger.Level.WARN, "Invalid sound format: " + cmd);
                         Messenger.log(Messenger.Level.DEBUG, ex.getMessage());
                     }
                 }
-            }
-            else if (sendAs.equalsIgnoreCase("[PLAYER]")) {
+            } else if (sendAs.equalsIgnoreCase("[PLAYER]")) {
                 Bukkit.dispatchCommand(player, cmd);
-            }
-            else if (sendAs.equalsIgnoreCase("[CONSOLE]")) {
+            } else if (sendAs.equalsIgnoreCase("[CONSOLE]")) {
                 Bukkit.dispatchCommand(Bukkit.getConsoleSender(), cmd);
             }
-        }
-        else Bukkit.dispatchCommand(player, cmd);
+        } else Bukkit.dispatchCommand(player, cmd);
     }
 
     public static int getTicksFromTime(String time) {
@@ -307,8 +292,7 @@ public class Utils {
 
         try {
             value = Integer.parseInt(time.substring(0, time.length() - 1));
-        }
-        catch (NumberFormatException ex) {
+        } catch (NumberFormatException ex) {
             Messenger.log(Messenger.Level.DEBUG, "Invalid time format: " + time);
         }
 
